# anastoli-api

./: Dockerfile  README.md  evil.js  pyproject.toml
src/: requirements.txt  run.py
src/api/: config.example.py  errors.py  search.py
src/api/api/blueprints/: __init__.py
src/api/blueprints/: __init__.py  health.py  schools.py
src/scrapper/: __init__.py  main.py
