[tool.poetry]
name = "anastoli-api"
version = "0.1.0"
description = ""
authors = ["Edward Pasenidis <me@edpasenidis.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
quart = "lo"
logbook = "^1.5.3"
hypercorn = "^0.10.2"
quart_openapi = "^1.6.0"
databases = "^0.3.2"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
